--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -2,7 +2,7 @@
   "name": "snap",
   "version": "0.1.0",
   "private": true,
-  "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "description": "Getting Ethereum gas fees within a MetaMask Snap.",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
