--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dco-gas-fees-snap",
-  "version": "0.2.0",
+  "name": "dco-gas-fee-snap",
+  "version": "0.1.0",
   "private": false,
   "description": "A simple MetaMask Snap to show current Ethereum gas fees.",
   "repository": {
